templates/kibana/route.yaml
# Route configuration for accessing Kibana dashboard
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana-sample
  namespace: monitoring  # Default namespace, can be overridden by deploy.sh
spec:
  port:
    targetPort: 5601
  tls:
    termination: passthrough
  to:
    kind: Service
    name: kibana-sample-kb-http
    weight: 100
  wildcardPolicy: None
